<resources>
    <string name="app_name">Foodpedia-APP</string>
    <string name="image_view_description">첨부한 이미지</string>
    <string name="morning">아침</string>
    <string name="lunch">점심</string>
    <string name="dinner">저녁</string>
    <string name="record_description">Please enter your diet</string>
    <string name="update">저장</string>
    <string name="feedback">피드백 작성</string>
    <string name="log_title">식단 기록</string>
    <string name="add">+</string>
    <string name="fat">지방</string>
    <string name="protein">단백질</string>
    <string name="carbohydrate">탄수화물</string>
    <string name="feedbackTextFirst">잘 챙겨먹었어요</string>
    <string name="feedbackTextSecond">양 조절에 실패했어요</string>
    <string name="feedbackTextThird">편식했어요</string>
    <string name="feedbackTextFourth">단 음식을 많이 먹었어요</string>
    <string name="feedbackTextFifth">균형있게 먹었어요</string>

    <string-array name="weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>